some more questions added problems: text goes out of bounds if its too long and fix issue with the other field not appearing

--- a/templates/stylesheet.css
+++ b/templates/stylesheet.css
@@ -34,15 +34,16 @@ h3 a {
     box-sizing: border-box;
     background-color:rgb(255, 255, 255);
   }
-
-input[type=text] {
-  padding: 5px 12px;
+/* used to style the input types */
+input[type=text], select {
+  padding: 5px 8px;
   margin: 4px 10px;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
   background-color: rgb(255, 255, 255);
 }
+
 
 /* used to automatically adjust the size of the input field and the accompaning text */
 .adjust-size{ 
@@ -56,7 +57,7 @@ label {
   word-break: break-all;
 }
 
-input {
+input, select {
   flex: 1 1 auto; /* take up remaining space */
   width: 100%; /* fill remaining space */
 }
